basic html structure

--- a/index.html
+++ b/index.html
@@ -4,11 +4,106 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" integrity="sha512-8bHTC73gkZ7rZ7vpqUQThUDhqcNFyYi2xgDgPDHc+GXVGHXq+xPjynxIopALmOPqzo9JZj0k6OqqewdGO3EsrQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Markets Today</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>Market Mockup</title>
 </head>
-<body>
-    
-    <script src="./assets/js/script.js"></script>
+<body class="">
+    <header class="">
+        <h1>Market Mockup</h1>
+        <p>The easy way to compare crypto</p>
+    </header>
+
+    <section class="">
+        <div class="">
+            <div class="">
+                <h3>Crypto Search</h3>
+                <label for="searchEl">Enter the name of a cryptocurrency</label>
+                <input type="text" id="searchEl"/>
+                <button id="submitBtn" class="" type="submit">Search</button>
+            </div>
+            <div class="history-box">
+                <h4>Search History</h4> 
+                <ul>
+                    <li>Bitcoin</li>
+                    <li>Ethereum</li>
+                    <li>Teather</li>
+                </ul>
+            </div>
+        </div>
+        <div class="">
+            <div class="">
+                <div class="">
+
+                </div>
+                <div class="">
+
+                </div>
+            </div>
+            <div class="">
+                <h4>Bitcoin</h4>
+                <h5>BTC</h5>
+                <p>Rank: #1</p>
+                <p>Price: $42,687.99 </p>
+                <p>% Change: 0.92%</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="">
+        <div class="">
+            <h3>Top Cryptocurrencies Today:</h3>
+            <div id="topCryptos" class="">
+                <div class ="">
+                    <h4>Bitcoin</h4>
+                    <h5>BTC</h5>
+                    <p>Rank: #1</p>
+                    <p>Price: $42,687.99 </p>
+                    <p>% Change: 0.92%</p>
+                </div>
+                <div class="">
+                    <h4>Ethereum</h4>
+                    <h5>ETC</h5>
+                    <p>Rank: #2</p>
+                    <p>Price: $3,241.73</p>
+                    <p>% Change: 3.73%</p>
+                </div>
+                <div class="">
+                    <h4>Tether</h4>
+                    <h5>USDT</h5>
+                    <p>Rank: #3</p>
+                    <p>Price: $1.00</p>
+                    <p>% Change: 0.01%</p>
+                </div>
+            </div>
+        </div>
+        <div class="">
+            <h3>Your Recently Viewed:</h3>
+            <div>
+                <div class ="">
+                    <h4>Bitcoin</h4>
+                    <h5>BTC</h5>
+                    <p>Rank: #1</p>
+                    <p>Price: $42,687.99 </p>
+                    <p>% Change: 0.92%</p>
+                </div>
+                <div class="">
+                    <h4>Ethereum</h4>
+                    <h5>ETC</h5>
+                    <p>Rank: #2</p>
+                    <p>Price: $3,241.73</p>
+                    <p>% Change: 3.73%</p>
+                </div>
+                <div class="">
+                    <h4>Tether</h4>
+                    <h5>USDT</h5>
+                    <p>Rank: #3</p>
+                    <p>Price: $1.00</p>
+                    <p>% Change: 0.01%</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- <script src="./assets/js/script.js"></script> -->
 </body>
 </html>
