re-include skeleton for demo

--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Market Mockup</title>
 </head>
-<body class="">
-    <header class="">
+<body class="container">
+    <header class="row header">
         <h1>Market Mockup</h1>
         <p>The easy way to compare crypto</p>
     </header>
 
-    <section class="">
-        <div class="">
-            <div class="">
+    <section class="row search-section">
+        <div class="four columns">
+            <div class="search-box">
                 <h3>Crypto Search</h3>
                 <label for="searchEl">Enter the name of a cryptocurrency</label>
                 <input type="text" id="searchEl"/>
-                <button id="submitBtn" class="" type="submit">Search</button>
+                <button id="submitBtn" class="button-primary" type="submit">Search</button>
             </div>
             <div class="history-box">
                 <h4>Search History</h4> 
@@ -31,16 +31,16 @@
                 </ul>
             </div>
         </div>
-        <div class="">
-            <div class="">
-                <div class="">
+        <div class="eight columns results-box">
+            <div class="five columns">
+                <div class="placeholder">
 
                 </div>
-                <div class="">
+                <div class="placeholder">
 
                 </div>
             </div>
-            <div class="">
+            <div class="seven columns">
                 <h4>Bitcoin</h4>
                 <h5>BTC</h5>
                 <p>Rank: #1</p>
@@ -50,25 +50,25 @@
         </div>
     </section>
 
-    <section class="">
-        <div class="">
+    <section class="row cards-section">
+        <div class="six columns">
             <h3>Top Cryptocurrencies Today:</h3>
-            <div id="topCryptos" class="">
-                <div class ="">
+            <div id="topCryptos" class="row">
+                <div class ="four columns c-card">
                     <h4>Bitcoin</h4>
                     <h5>BTC</h5>
                     <p>Rank: #1</p>
                     <p>Price: $42,687.99 </p>
                     <p>% Change: 0.92%</p>
                 </div>
-                <div class="">
+                <div class="four columns c-card">
                     <h4>Ethereum</h4>
                     <h5>ETC</h5>
                     <p>Rank: #2</p>
                     <p>Price: $3,241.73</p>
                     <p>% Change: 3.73%</p>
                 </div>
-                <div class="">
+                <div class="four columns c-card">
                     <h4>Tether</h4>
                     <h5>USDT</h5>
                     <p>Rank: #3</p>
@@ -77,24 +77,24 @@
                 </div>
             </div>
         </div>
-        <div class="">
+        <div class="six columns">
             <h3>Your Recently Viewed:</h3>
             <div>
-                <div class ="">
+                <div class ="four columns c-card">
                     <h4>Bitcoin</h4>
                     <h5>BTC</h5>
                     <p>Rank: #1</p>
                     <p>Price: $42,687.99 </p>
                     <p>% Change: 0.92%</p>
                 </div>
-                <div class="">
+                <div class="four columns c-card">
                     <h4>Ethereum</h4>
                     <h5>ETC</h5>
                     <p>Rank: #2</p>
                     <p>Price: $3,241.73</p>
                     <p>% Change: 3.73%</p>
                 </div>
-                <div class="">
+                <div class="four columns c-card">
                     <h4>Tether</h4>
                     <h5>USDT</h5>
                     <p>Rank: #3</p>
