--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" integrity="sha512-EZLkOqwILORob+p0BXZc+Vm3RgJBOe1Iq/0fiI7r/wJgzOFZMlsqTa29UEl6v6U6gsV4uIpsNZoV32YZqrCRCQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Market Mockup</title>
 </head>
@@ -24,19 +24,17 @@
             </div>
             <div class="history-box">
                 <h4>Search History</h4> 
-                <ul>
-                    <li>Bitcoin</li>
-                    <li>Ethereum</li>
-                    <li>Teather</li>
+                <ul id="historyList">
+                    
                 </ul>
             </div>
         </div>
         <div class="eight columns results-box">
             <div class="five columns">
-                <div class="placeholder">
+                <div>
 
                 </div>
-                <div class="placeholder">
+                <div>
 
                 </div>
             </div>
@@ -61,20 +59,6 @@
                     <p>Price: $42,687.99 </p>
                     <p>% Change: 0.92%</p>
                 </div>
-                <div class="four columns c-card">
-                    <h4>Ethereum</h4>
-                    <h5>ETC</h5>
-                    <p>Rank: #2</p>
-                    <p>Price: $3,241.73</p>
-                    <p>% Change: 3.73%</p>
-                </div>
-                <div class="four columns c-card">
-                    <h4>Tether</h4>
-                    <h5>USDT</h5>
-                    <p>Rank: #3</p>
-                    <p>Price: $1.00</p>
-                    <p>% Change: 0.01%</p>
-                </div>
             </div>
         </div>
         <div class="six columns">
@@ -87,23 +71,9 @@
                     <p>Price: $42,687.99 </p>
                     <p>% Change: 0.92%</p>
                 </div>
-                <div class="four columns c-card">
-                    <h4>Ethereum</h4>
-                    <h5>ETC</h5>
-                    <p>Rank: #2</p>
-                    <p>Price: $3,241.73</p>
-                    <p>% Change: 3.73%</p>
-                </div>
-                <div class="four columns c-card">
-                    <h4>Tether</h4>
-                    <h5>USDT</h5>
-                    <p>Rank: #3</p>
-                    <p>Price: $1.00</p>
-                    <p>% Change: 0.01%</p>
-                </div>
             </div>
         </div>
     </section>
-    <!-- <script src="./assets/js/script.js"></script> -->
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
