--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" integrity="sha512-EZLkOqwILORob+p0BXZc+Vm3RgJBOe1Iq/0fiI7r/wJgzOFZMlsqTa29UEl6v6U6gsV4uIpsNZoV32YZqrCRCQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Market Mockup</title>
+    <title>Markets Today</title>
 </head>
 <body class="container">
     <header class="row header">
-        <h1>Market Mockup</h1>
+        <h1>Markets Today</h1>
         <p>The easy way to compare crypto</p>
     </header>
 
@@ -50,15 +50,9 @@
 
     <section class="row cards-section">
         <div class="six columns">
-            <h3>Top Cryptocurrencies Today:</h3>
+            <h4>Top Cryptocurrencies Today:</h4>
             <div id="topCryptos" class="row">
-                <div class ="four columns c-card">
-                    <h4>Bitcoin</h4>
-                    <h5>BTC</h5>
-                    <p>Rank: #1</p>
-                    <p>Price: $42,687.99 </p>
-                    <p>% Change: 0.92%</p>
-                </div>
+                
             </div>
         </div>
         <div class="six columns">
