--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </ul>
             </div>
         </div>
-        <div class="eight columns results-box">
+        <div id="search-results" class="eight columns results-box">
             <div class="five columns">
                 <div>
 
@@ -38,13 +38,7 @@
 
                 </div>
             </div>
-            <div class="seven columns">
-                <h4>Bitcoin</h4>
-                <h5>BTC</h5>
-                <p>Rank: #1</p>
-                <p>Price: $42,687.99 </p>
-                <p>% Change: 0.92%</p>
-            </div>
+            
         </div>
     </section>
 
