--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <button id="submitBtn" class="button-primary" type="submit">Search</button>
             </div>
             <div class="history-box">
-                <h4>Search History</h4> 
+                <h4 id=historyTitle></h4> 
                 <ul id="historyList">
                     
                 </ul>
@@ -50,15 +50,8 @@
             </div>
         </div>
         <div class="six columns">
-            <h3>Your Recently Viewed:</h3>
-            <div>
-                <div class ="four columns c-card">
-                    <h4>Bitcoin</h4>
-                    <h5>BTC</h5>
-                    <p>Rank: #1</p>
-                    <p>Price: $42,687.99 </p>
-                    <p>% Change: 0.92%</p>
-                </div>
+            <h4>Your Recently Viewed:</h4>
+            <div id="recent-cards">
             </div>
         </div>
     </section>
