--- a/index.html
+++ b/index.html
@@ -29,15 +29,11 @@
                 </ul>
             </div>
         </div>
-        <div id="search-results" class="eight columns results-box">
-            <div class="five columns">
-                <div>
-
-                </div>
-                <div>
-
-                </div>
+        <div id="" class="eight columns results-box">
+            <div id="search-results" class="">
+                
             </div>
+            <div id="news-results" class=""></div>
             
         </div>
     </section>
