--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 </head>
 <body class="container">
     <header class="row header">
-        <h1>Markets Today</h1>
+        <h1>Crypto Today</h1>
         <p>The easy way to compare crypto</p>
     </header>
 
     <section class="row search-section">
         <div class="four columns">
-            <div class="search-box">
+            <div class="search-box u-max-full-width">
                 <h3>Crypto Search</h3>
                 <label for="searchEl">Enter the name of a cryptocurrency</label>
-                <input type="text" id="searchEl"/>
+                <input type="text" id="searchEl" class="u-max-full-width"/>
                 <button id="submitBtn" class="button-primary" type="submit">Search</button>
             </div>
             <div class="history-box">
